k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber-app
  namespace: fiber-app
  labels:
    app: fiber-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fiber-app
  template:
    metadata:
      labels:
        app: fiber-app
    spec:
      containers:
      - name: fiber-app
        image: 246314649600.dkr.ecr.us-east-2.amazonaws.com/devops-demo/fiber-app:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
            - ALL
      restartPolicy: Always
      securityContext:
        fsGroup: 1001
